Se realiza las secciones de botones y contenido del proyecto

--- a/index.html
+++ b/index.html
@@ -23,14 +23,19 @@
       <img src="assets/images/logos/Bolivariano.png" alt="logoBolivariano">
       <img src="assets/images/logos/BolOnline.png" alt="logoOnline">
     </div>
-    <nav class="menu text-center">
-      <img src="assets/images/home.png" alt="iconoInicio">
-      <a href="#">OFERTA ACADEMICA</a>
-      <a href="#">FORMACION CONTINUA</a>
-      <a href="#">MATRICULATE ONLINE</a>
-      <a href="#">METODOLOGIA DE ESTUDIO</a>
-      <a href="#">BOLIVARIANO DIGITAL EDUCA</a>
+
+    <nav class="menu">
+      <div class="sub-menu text-center contenedor">
+        <img src="assets/images/home.png" alt="iconoInicio">
+        <a href="#">OFERTA ACADEMICA</a>
+        <a href="#">FORMACION CONTINUA</a>
+        <a href="#">MATRICULATE ONLINE</a>
+        <a href="#">METODOLOGIA DE ESTUDIO</a>
+        <a href="#">BOLIVARIANO DIGITAL EDUCA</a>
+      </div>
+      
     </nav>
+
   </header>
 
   <section class="sub-hero">
@@ -67,26 +72,29 @@
 
   <section class="botones">
 
-    <div class="sub-botones contenedor">
+    <div class="sub-botones contenedor text-center">
 
       <div class="acceso">
         <a href="#">  
           <img src="assets/images/computador.png" alt="">
-          <p>ACCESO 24/7 365 DÍAS</p>
+          <p>ACCESO 24/7</p>
+          <p>365 DÍAS</p>
         </a>
       </div>
 
       <div class="horario">
         <a href="">
           <img src="assets/images/reloj.png" alt="">
-          <p>HORARIOS FLEXIBLES</p>
+          <p>HORARIOS</p>
+          <p>FLEXIBLES</p>
         </a>
       </div>
 
       <div class="mencion">
         <a href="">
           <img src="assets/images/birrete.png" alt="">
-          <p>MENCIÓN UNIVERSITARIA</p>
+          <p>MENCIÓN</p>
+          <p>UNIVERSITARIA</p>
         </a>
       </div>
 
