--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <!--Favicon / iconos-->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/iconos/icono-32x32.png"/>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/brands.min.css" integrity="sha512-W/zrbCncQnky/EzL+/AYwTtosvrM+YG/V6piQLSe2HuKS6cmbw89kjYkp3tWFn1dkWV7L1ruvJyKbLz73Vlgfg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/regular.min.css" integrity="sha512-rOTVxSYNb4+/vo9pLIcNAv9yQVpC8DNcFDWPoc+gTv9SLu5H8W0Dn7QA4ffLHKA0wysdo6C5iqc+2LEO1miAow==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/solid.min.css" integrity="sha512-P9pgMgcSNlLb4Z2WAB2sH5KBKGnBfyJnq+bhcfLCFusrRc4XdXrhfDluBl/usq75NF5gTDIMcwI1GaG5gju+Mw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!--Estilos-->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css">
@@ -36,6 +41,21 @@
         <a href="digitalEduca.html"><p>BOLIVARIANO</p><p>DIGITAL EDUCA</p></a>
       </nav>
       
+    </div>
+
+    <div class="menu-mobile">
+      <label for="check" class="menu-icon">
+        <i class="fa-solid fa-bars"></i>
+      </label>  
+      <input type="checkbox" id="check" class="menu_checkbox">
+      <ul class="menu-mobile-items">
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="quieneSomos.html">Oferta Academica</a></li>
+        <li><a href="servicios.html">Formacion Continua</a></li>
+        <li><a href="blog.html">Matriculate</a></li>
+        <li><a href="propiedades.html">Metdodologia de Estudio</a></li>
+        <li><a href="contactanos.html">Digital Educa</a></li>
+      </ul>  
     </div>
 
   </header>
