Se realiza unos cambios solicitados y se ajusta el diseño del proyecto

--- a/digitalEduca.html
+++ b/digitalEduca.html
@@ -37,6 +37,21 @@
       
     </div>
 
+    <div class="menu-mobile">
+      <label for="check" class="menu-icon">
+        <i class="fa-solid fa-bars"></i>
+      </label>  
+      <input type="checkbox" id="check" class="menu_checkbox">
+      <ul class="menu-mobile-items">
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="ofertaAcademica.html">Oferta Academica</a></li>
+        <li><a href="formacionContinua.html">Formacion Continua</a></li>
+        <li><a href="matriculateOnline.html">Matriculate</a></li>
+        <li><a href="metodologiaEstudio.html">Metdodologia de Estudio</a></li>
+        <li><a href="digitalEduca.html">Digital Educa</a></li>
+      </ul>  
+    </div>
+
   </header>
 
 
