--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
       <input type="checkbox" id="check" class="menu_checkbox">
       <ul class="menu-mobile-items">
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="quieneSomos.html">Oferta Academica</a></li>
-        <li><a href="servicios.html">Formacion Continua</a></li>
-        <li><a href="blog.html">Matriculate</a></li>
-        <li><a href="propiedades.html">Metdodologia de Estudio</a></li>
-        <li><a href="contactanos.html">Digital Educa</a></li>
+        <li><a href="ofertaAcademica.html">Oferta Academica</a></li>
+        <li><a href="formacionContinua.html">Formacion Continua</a></li>
+        <li><a href="matriculateOnline.html">Matriculate</a></li>
+        <li><a href="metodologiaEstudio.html">Metdodologia de Estudio</a></li>
+        <li><a href="digitalEduca.html">Digital Educa</a></li>
       </ul>  
     </div>
 
@@ -124,7 +124,7 @@
 
     </div>
 
-    <div class="imagen-superpuesta">
+    <div class="imagen-superpuesta contenedor">
 
       <img src="assets/images/graduados.JPG" alt="">
       <p class="text-center">TITULOS RECONOCIDOS POR LA</p>
