Se coloca el header en position fixed

--- a/formacionContinua.html
+++ b/formacionContinua.html
@@ -55,7 +55,7 @@
   </header>
 
 
-  <section class="contenedor contenido">
+  <section class="contenedor contenido sub-hero">
     <h1>FORMACION CONTINUA</h1>
   </section>
   
