--- a/matriculateOnline.html
+++ b/matriculateOnline.html
@@ -55,7 +55,7 @@
   </header>
 
 
-  <section class="contenedor contenido">
+  <section class="contenedor contenido sub-hero">
     <h1>MATRICULATE ONLINE</h1>
   </section>
   
