--- a/ofertaAcademica.html
+++ b/ofertaAcademica.html
@@ -55,7 +55,7 @@
   </header>
 
 
-  <section class="contenedor contenido">
+  <section class="contenedor contenido sub-hero">
     <h1>OFERTA ACADEMICA</h1>
   </section>
   
