Se actualiza el enlace de digital educa

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="formacionContinua.html"><p>FORMACION</p><p>CONTINUA</p></a>
         <a href="matriculateOnline.html"><p>MATRICULATE</p><p>ONLINE</p></a>
         <a href="metodologiaEstudio.html"><p>METODOLOGIA</p><p>DE ESTUDIO</p></a>
-        <a href="digitalEduca.html"><p>BOLIVARIANO</p><p>DIGITAL EDUCA</p></a>
+        <a href="https://bolivarianovirtual.com/login/index.php"><p>BOLIVARIANO</p><p>DIGITAL EDUCA</p></a>
       </nav>
       
     </div>
@@ -54,7 +54,7 @@
         <li><a href="formacionContinua.html">Formacion Continua</a></li>
         <li><a href="matriculateOnline.html">Matriculate</a></li>
         <li><a href="metodologiaEstudio.html">Metdodologia de Estudio</a></li>
-        <li><a href="digitalEduca.html">Digital Educa</a></li>
+        <li><a href="https://bolivarianovirtual.com/login/index.php">Digital Educa</a></li>
       </ul>  
     </div>
 
