Se actualiza el menu en todas las paginas

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="menu">
       
       <nav class="sub-menu text-center contenedor">
-        <button onclick="window.location.href = 'index.html';" type="submit"><img src="assets/images/home.png" alt="iconoInicio"></button>
+        <!--<button onclick="window.location.href = 'index.html';" type="submit"><img src="assets/images/home.png" alt="iconoInicio"></button>-->
         <a href="ofertaAcademica.html"><p>OFERTA</p><p>ACADEMICA</p></a>
         <a href="formacionContinua.html"><p>FORMACION</p><p>CONTINUA</p></a>
         <a href="matriculateOnline.html"><p>MATRICULATE</p><p>ONLINE</p></a>
@@ -49,7 +49,7 @@
       </label>  
       <input type="checkbox" id="check" class="menu_checkbox">
       <ul class="menu-mobile-items">
-        <li><a href="index.html">Inicio</a></li>
+        <!--<li><a href="index.html">Inicio</a></li>-->
         <li><a href="ofertaAcademica.html">Oferta Academica</a></li>
         <li><a href="formacionContinua.html">Formacion Continua</a></li>
         <li><a href="matriculateOnline.html">Matriculate</a></li>
