--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/solid.min.css" integrity="sha512-P9pgMgcSNlLb4Z2WAB2sH5KBKGnBfyJnq+bhcfLCFusrRc4XdXrhfDluBl/usq75NF5gTDIMcwI1GaG5gju+Mw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!--Estilos-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css">
 
@@ -85,8 +86,47 @@
         </fieldset>
       </div>
       
-      <div class="carrusel" >
-       <img src="assets/images/icono1.png" alt="">
+      <div class="carrusel text-center">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="/assets/images/Carrusel/uno.png" class="d-block w-100" alt="uno">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="titulo-carrusel">Administracion de Empresas e Inteligencia de Negocios</h3>
+                <!--<p>Inteligencia de Negocios</p>-->
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/assets/images/Carrusel/dos.png" class="d-block w-100" alt="dos">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="titulo-carrusel">Administracion de Sistemas de Salud</h3>
+                <!--<p>Some representative placeholder content for the second slide.</p>-->
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/assets/images/Carrusel/tres.png" class="d-block w-100" alt="tres">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Calidad y Productividad</h3>
+                <!--<p>Some representative placeholder content for the second slide.</p>-->
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/assets/images/Carrusel/cuatro.png" class="d-block w-100" alt="cuatro">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Administracion Tecnologica e Innovacion Estrategica</h3>
+                <!--<p>Some representative placeholder content for the second slide.</p>-->
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
       </div>
   
       
@@ -98,28 +138,22 @@
 
     <div class="sub-botones contenedor text-center">
 
-      <div class="acceso">
-        <a href="#">  
-          <img src="assets/images/computador.png" alt="">
-          <p>ACCESO 24/7</p>
-          <p>365 DÍAS</p>
-        </a>
+      <div  id="acceso" class="acceso">
+          <img class="acceso-img" src="assets/images/computador.png" alt="">
+          <p class="acceso-texto">ACCESO 24/7</p>
+          <p class="acceso-texto">365 DÍAS</p>
       </div>
 
-      <div class="horario">
-        <a href="">
-          <img src="assets/images/reloj.png" alt="">
-          <p>HORARIOS</p>
-          <p>FLEXIBLES</p>
-        </a>
+      <div id="horario" class="horario">
+          <img class="horario-img" src="assets/images/reloj.png" alt="">
+          <p class="horario-texto">HORARIOS</p>
+          <p class="horario-texto">FLEXIBLES</p>
       </div>
 
-      <div class="mencion">
-        <a href="">
-          <img src="assets/images/birrete.png" alt="">
-          <p>MENCIÓN</p>
-          <p>UNIVERSITARIA</p>
-        </a>
+      <div id="obtiene" class="mencion">
+          <img class="mencion-image" src="assets/images/birrete.png" alt="">
+          <p class="mencion-texto">MENCIÓN</p>
+          <p class="mencion-texto">UNIVERSITARIA</p>
       </div>
 
     </div>
@@ -148,7 +182,7 @@
 
   </footer>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
 
 </body>
