Se inserto un video

--- a/ofertaAcademica.html
+++ b/ofertaAcademica.html
@@ -162,7 +162,7 @@
   <div class=" video-contenido contenedor text-center">
     <h4>VIDEOS DE PROMOCIÓN DE CARRERAS</h4>
 
-    <video class="video-prom" src="assets/videos/videoplayback.mp4" autoplay>
+    <video class="video-prom" src="assets/videos/videoplayback.mp4" autoplay controls>
       VIDEOS DE PROMOCIÓN DE CARRERAS
     </video>
 
@@ -190,6 +190,7 @@
     </div>
 
     <div class="footer-fin">
+
       <div class="iconos">
         <a href="https://www.youtube.com/channel/UCL1pzhEf9Q5CT_Hp7cDvMiw" target="_blank" rel="noopener"><i class="bi bi-youtube"></i></a>
         <a href="https://www.facebook.com/Instituto-Tecnol%C3%B3gico-Bolivariano-Loja-800671470025862/" target="_blank" rel="noopener"><i class="bi bi-facebook"></i></a>
@@ -198,7 +199,7 @@
         <a href="https://www.linkedin.com/company/instituto-tecnol%C3%B3gico-bolivariano" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="text-center texto-footer">
-        <p> <span>Diseñado por Instituto Superior Universitario Bolivariano </span> &#169 2024 </p>
+        <p> <span>Diseñado por Instituto Superior Universitario Bolivariano</span> &#169 2024 </p>
         <p>Desarrollado por Corp. Simtelec</p>
       </div>
     </div>
