Se adiciono el envio de los formularios a whatsapp y se realizo cambios en unas páginas

--- a/carreras/diplomados/gestion-proyectos.html
+++ b/carreras/diplomados/gestion-proyectos.html
@@ -142,7 +142,7 @@
             <label for="telefono">Teléfono Móvil</label>
             <input type="number" id="telefono" name="telefono" required>
             
-            <button class="btnenviar" onclick="submitFormAndGoBack();" type="button">Enviar</button>
+            <button class="btnenviar" onclick="sendToWhatsApp();" type="button">Enviar</button>
       
           </form>
   
