--- a/pregrado.html
+++ b/pregrado.html
@@ -39,13 +39,6 @@
         <button onclick="window.location.href = 'index.html';" type="submit"><img src="assets/images/home.png" alt="iconoInicio"></button>
         <li class="dropdown"><a href="pregrado.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
           <ul> 
-            <li><a href="pregrado.html">Administración de Sistemas de Salud</a></li>
-            <li><a href="posgrado.html">Administración tecnológica e innovación estratégica</a></li> 
-            <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
-          </ul>
-        </li>
-        <li class="dropdown"><a href="oferta-academica.html">POSGRADO<i class="bi bi-chevron-down"></i></a>
-          <ul> 
             <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
             <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
@@ -53,14 +46,15 @@
             <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
           </ul>
         </li>
-        <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
         <li class="dropdown"><a href="formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="/carreras/diplomados/cuidadospacientecritico.html">Cuidados de Enfermería en el Paciente Crítico</a></li>
             <li><a href="/carreras/diplomados/instrumentacion.html">Instrumentación Quirúrgica</a></li> 
-            <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>   
+            <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>
+            <li><a href="/carreras/diplomados/adultomayor.html">Gestión de Proyectos</a></li>   
           </ul>
         </li>
+        <li><a href="matriculate-online.html">Matriculate Online</a></li>
         
       </nav>
       
@@ -73,14 +67,7 @@
       <input type="checkbox" id="check" class="menu_checkbox">
       <ul class="menu-mobile-items">
         <li><a href="index.html">Inicio</a></li>
-        <li class="dropdown"><a href="admisiones.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
-          <ul> 
-            <li><a href="pregrado.html">Administración de Sistemas de Salud</a></li>
-            <li><a href="posgrado.html">Administración tecnológica e innovación estratégica</a></li> 
-            <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
-          </ul>
-        </li>
-        <li class="dropdown"><a href="ofertaAcademica.html">POSGRADO<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="pregrado.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
@@ -89,14 +76,15 @@
             <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
           </ul>
         </li>
-        <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-        <li class="dropdown"><a href="matriculateOnline.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="/carreras/diplomados/cuidadospacientecritico.html">Cuidados de Enfermería en el Paciente Crítico</a></li>
             <li><a href="/carreras/diplomados/instrumentacion.html">Instrumentación Quirúrgica</a></li> 
-            <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>   
+            <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>
+            <li><a href="/carreras/diplomados/adultomayor.html">Gestión de Proyectos</a></li>   
           </ul>
         </li>
+        <li><a href="matriculate-online.html">Matriculate Online</a></li>
       </ul>  
     </div>
 
