--- a/carreras/diplomados/instrumentacion.html
+++ b/carreras/diplomados/instrumentacion.html
@@ -143,7 +143,7 @@
             <label for="telefono">Teléfono Móvil</label>
             <input type="number" id="telefono" name="telefono" required>
             
-            <button class="btnenviar" onclick="submitFormAndGoBack();" type="button">Enviar</button>
+            <button class="btnenviar" onclick="sendToWhatsApp();" type="button">Enviar</button>
       
           </form>
   
@@ -156,7 +156,7 @@
 
   <div class="contiene video-contenedor">
     <div class="video-responsivo">
-        <iframe src="https://www.youtube.com/embed/zzJYalTdY8c" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/XBLGIY4w8oE" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 
