Se actualiza las paginas

--- a/oferta-academica.html
+++ b/oferta-academica.html
@@ -67,14 +67,7 @@
       <input type="checkbox" id="check" class="menu_checkbox">
       <ul class="menu-mobile-items">
         <li><a href="index.html">Inicio</a></li>
-        <li class="dropdown"><a href="admisiones.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
-          <ul> 
-            <li><a href="pregrado.html">Administración de Sistemas de Salud</a></li>
-            <li><a href="posgrado.html">Administración tecnológica e innovación estratégica</a></li> 
-            <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
-          </ul>
-        </li>
-        <li class="dropdown"><a href="ofertaAcademica.html">POSGRADO<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="ofertaAcademica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
@@ -91,6 +84,7 @@
             <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>   
           </ul>
         </li>
+        <li><a href="matriculate-online.html">Matriculate Online</a></li>
       </ul>  
     </div>
 
@@ -102,7 +96,7 @@
       <div class="form-texto">
 
         <div class="texto-esp text-center">
-          <h2>POSGRADO</h2>
+          <h2>PREGRADO</h2>
           <p>Disponemos 5 carreras en línea en Tecnología Superior Universitaria, con docentes Internacionales y nacionales que te guiarán en este apasionante mundo de la educación online.</p>
           <h3 class="text-center">LO QUE SUEÑAS, LO QUE QUIERES SER</h3>
         </div>
