Se actualiza las paginas

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     
   </section>
 
-  <section class="img-admindex">
+  <section class="img-admindex metodo">
     <div class="contenido-metodo">
     
       <div class="metodologia text-center">
