--- a/matriculate-online.html
+++ b/matriculate-online.html
@@ -33,13 +33,25 @@
     </div>
 
     <div class="menu">
-      <nav class="sub-menu text-center contenedor">
-        <button onclick="window.location.href = 'index.html';" type="submit"><img src="assets/images/home.png" alt="iconoInicio"></button>
-        <a href="ofertaAcademica.html"><p>OFERTA</p><p>ACADEMICA</p></a>
-        <a href="formacionContinua.html"><p>FORMACION</p><p>CONTINUA</p></a>
-        <a href="matriculateOnline.html"><p>MATRICULATE</p><p>ONLINE</p></a>
-        <a href="metodologiaEstudio.html"><p>METODOLOGIA</p><p>DE ESTUDIO</p></a>
-        <a href="https://bolivarianovirtual.com/login/index.php"><p>BOLIVARIANO</p><p>DIGITAL EDUCA</p></a>
+      
+      <nav class="sub-menu text-center contenedor navbar">
+        <!--<button onclick="window.location.href = 'index.html';" type="submit"><img src="assets/images/home.png" alt="iconoInicio"></button>-->
+        <li class="dropdown"><a href="admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
+          <ul> 
+            <li><a href="oferta-academica.html">PREGRADO</a></li> 
+            <li><a href="formacioncontinua.html">FORMACION CONTINUA</a></li>   
+          </ul>
+        </li>
+        <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADEMICA<i class="bi bi-chevron-down"></i></a>
+          <ul> 
+            <li><a href="oferta-academica.html">PREGRADO</a></li>
+            <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
+          </ul>
+        </li>
+        <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
+        <a href="matriculate-Online.html">MATRICULATE ONLINE</a>
+        <a href="metodologia-Estudio.html">METODOLOGIA DE ESTUDIO</a>
+        <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
       </nav>
       
     </div>
@@ -50,12 +62,23 @@
       </label>  
       <input type="checkbox" id="check" class="menu_checkbox">
       <ul class="menu-mobile-items">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="ofertaAcademica.html">Oferta Academica</a></li>
-        <li><a href="formacionContinua.html">Formacion Continua</a></li>
-        <li><a href="matriculateOnline.html">Matriculate</a></li>
-        <li><a href="metodologiaEstudio.html">Metdodologia de Estudio</a></li>
-        <li><a href="https://bolivarianovirtual.com/login/index.php">Digital Educa</a></li>
+        <!--<li><a href="index.html">Inicio</a></li>-->
+        <li class="dropdown"><a href="admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
+          <ul> 
+            <li><a href="oferta-academica.html">PREGRADO</a></li> 
+            <li><a href="formacioncontinua.html">FORMACION CONTINUA</a></li>   
+          </ul>
+        </li>
+        <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADEMICA<i class="bi bi-chevron-down"></i></a>
+          <ul> 
+            <li><a href="oferta-academica.html">PREGRADO</a></li> 
+            <li><a href="formacioncontinua.html">FORMACION CONTINUA</a></li>   
+          </ul>
+        </li>
+        <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
+        <a href="matriculate-online.html">MATRICULATE ONLINE</a>
+        <a href="metodologia-estudio.html">METODOLOGIA DE ESTUDIO</a>
+        <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
       </ul>  
     </div>
 
