Se crea las paginas de tecnologia

--- a/formacion-continua.html
+++ b/formacion-continua.html
@@ -36,7 +36,7 @@
     <div class="menu">
               
         <nav class="sub-menu text-center contenedor navbar">
-          <button onclick="window.location.href = 'index.html';" type="submit"><i class="bi bi-house-door-fill"></i></button>
+          <a href="index.html"><img src="assets/images/home.png" alt="iconoInicio"></a>
           <li class="dropdown"><a href="oferta-academica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
             <ul> 
               <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
@@ -149,34 +149,12 @@
     <!--<h3>PROCESO DE ADMISIÓN</h3>-->
     <img src="/assets/images/banner/bannerformcont.png" alt="banner">
   </div>  
-
-  <!--<div class="mini-tarjetas">
-
-    <div class="mini-tarjeta-contenido">
-      <h4>DOCENTES INTERNACIONALES</h4>
-    </div>
-
-    <div class="mini-tarjeta-contenido">
-      <h4>DIPLOMADOS REFERENTES</h4>
-    </div>
-
-    <div class="mini-tarjeta-contenido">
-      <h4>AVAL DE NUESTRO INSTITUTO UNIVERSITARIO</h4>
-    </div>
-
-    <div class="mini-tarjeta-contenido">
-      <h4>FORMACIÓN EN PLATAFORMA ONLINE 24/7</h4>
-    </div>
-
-  </div>-->
   
   <div class="texto-formcontinua">
     <p>Transformemos juntos el mundo: convirtamos nuestros sueños en realidad. Cada uno de nosotros tiene el poder de moldear el futuro que deseamos ver. Ya sea a través de pequeñas acciones cotidianas o grandes iniciativas, podemos hacer una diferencia significativa en nuestras vidas y en la de los demás. Lo que sueñas lo que quieres ser. </p>
   </div>
 
-  <section class="tarjetas">
-
-    
+  <section class="tarjetas">    
 
     <div class="tarjeta-contenido_diplomado contenedor">
 
