Se termina la parte informativa de las paginas de pregrado

--- a/oferta-academica.html
+++ b/oferta-academica.html
@@ -42,8 +42,8 @@
             <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
             <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="/carreras/maestrias/calidadProductividad.html">Tecnología Superior en Calidad y Productividad</a></li>
+            <li><a href="formacioncontinua.html">Tecnología Superior Universitaria en Contabilidad</a></li>   
           </ul>
         </li>
         <li class="dropdown"><a href="formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
@@ -72,8 +72,8 @@
             <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
             <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior en Calidad y Productividad </a></li>
+            <li><a href="formacioncontinua.html">Tecnología Superior Universitaria en Contabilidad</a></li>   
           </ul>
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
@@ -126,12 +126,12 @@
             <div>
               <label for="tipoEstudio">Tipo de Estudio</label>
               <select id="tipoEstudio" name="tipoEstudio" required>
-                <option value="ninguno">Seleccione una opción</option>  
+                <option value="ninguno">Seleccione una opción</option>
                 <option value="Administración de Sistemas de Salud">Administración de Sistemas de Salud</option>
                 <option value="Administración tecnológica e innovación estratégica">Administración tecnológica e innovación estratégica</option>
                 <option value="Administración de Empresas e Inteligencia de Negocios">Administración de Empresas e Inteligencia de Negocios</option>
+                <option value="Tecnología Superior en Calidad y Productividad">Tecnología Superior en Calidad y Productividad</option>
                 <option value="Tecnología Superior Universitaria en Contabilidad">Tecnología Superior Universitaria en Contabilidad</option>
-                <option value="continua">Formación Continua</option>
               </select>
   
             </div>
@@ -202,11 +202,11 @@
           <img src="/assets/images/img-carreras/cuatro.png" alt="">
         </div>
         <div class="tarjeta-contenido_texto">
-          <h2>Tecnología Superior Universitaria en Contabilidad</h2>
+          <h2>Tecnología Superior en Calidad y Productividad</h2>
           <p>Descubre una oferta de clase mundial sin salir de tu país. Nuestros programas te abrirán las puertas al mundo y te harán marcar la diferencia. Te invitamos a trascender, innovar y a ser un líder referencial.</p>
         </div>
         <div class="enlace-carrera">
-          <a href="/carreras/maestrias/contabilidad.html">Conoce Más</a>
+          <a href="/carreras/maestrias/calidadProductividad.html">Conoce Más</a>
         </div>
       </div>
       <div class="tarjeta-contenido_central">
@@ -218,7 +218,7 @@
           <p>Nos destacamos por nuestra propuesta única de cinco maestrías que aportan a la formación de profesionales integrales, líderes de impacto y globalmente competitivos. Posgradistas que comprenden las exigencias actuales y destacan en el mundo de los negocios.</p>
         </div>
         <div class="enlace-carrera">
-          <a href="/carreras/maestrias/calidadProductividad.html">Conoce Más</a>
+          <a href="/carreras/maestrias/contabilidad.html">Conoce Más</a>
         </div>
       </div>
 
