--- a/admisiones-iub.html
+++ b/admisiones-iub.html
@@ -43,8 +43,8 @@
               <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
               <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
               <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-              <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-              <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+              <li><a href="/carreras/maestrias/calidadProductividad.html">Tecnologia Superior en Calidad y Productividad </a></li>
+              <li><a href="/formacion-continua.html">Tecnología Superior Universitaria en Contabilidad</a></li>   
             </ul>
           </li>
           <li class="dropdown"><a href="formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
@@ -73,16 +73,17 @@
               <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
               <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
               <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-              <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-              <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+              <li><a href="/carreras/maestrias/contabilidad.html"> </a>Tecnologia Superior en Calidad y Productividad</li>
+              <li><a href="/formacioncontinua.html">Tecnología Superior Universitaria en Contabilidad</a></li>   
             </ul>
           </li>
           <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-          <li class="dropdown"><a href="matriculateOnline.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
             <ul> 
               <li><a href="/carreras/diplomados/cuidadospacientecritico.html">Cuidados de Enfermería en el Paciente Crítico</a></li>
               <li><a href="/carreras/diplomados/instrumentacion.html">Instrumentación Quirúrgica</a></li> 
-              <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>   
+              <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>
+              <li><a href="/carreras/diplomados/adultomayor.html">Gestion de Proyectos</a></li>   
             </ul>
           </li>
           <li><a href="matriculate-online.html">Matriculate Online</a></li>
