Se crea el modulo de matriculate online y se adiciona imagenes

--- a/metodologia-estudio.html
+++ b/metodologia-estudio.html
@@ -39,7 +39,7 @@
         <li class="dropdown"><a href="admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="oferta-academica.html">PREGRADO</a></li> 
-            <li><a href="formacioncontinua.html">FORMACION CONTINUA</a></li>   
+            <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
           </ul>
         </li>
         <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADEMICA<i class="bi bi-chevron-down"></i></a>
@@ -49,7 +49,7 @@
           </ul>
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-        <a href="matriculate-Online.html">MATRICULATE ONLINE</a>
+        <a href="matriculate-online.php">MATRICULATE ONLINE</a>
         <a href="metodologia-Estudio.html">METODOLOGIA DE ESTUDIO</a>
         <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
       </nav>
@@ -66,17 +66,17 @@
         <li class="dropdown"><a href="admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="oferta-academica.html">PREGRADO</a></li> 
-            <li><a href="formacioncontinua.html">FORMACION CONTINUA</a></li>   
+            <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
           </ul>
         </li>
         <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADEMICA<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="oferta-academica.html">PREGRADO</a></li> 
-            <li><a href="formacioncontinua.html">FORMACION CONTINUA</a></li>   
+            <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
           </ul>
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-        <a href="matriculate-online.html">MATRICULATE ONLINE</a>
+        <a href="matriculate-online.php">MATRICULATE ONLINE</a>
         <a href="metodologia-estudio.html">METODOLOGIA DE ESTUDIO</a>
         <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
       </ul>  
@@ -85,14 +85,129 @@
   </header>
 
 
-  <section class="contenedor contenido sub-hero">
-    <h1>METODOLOGIA DE ESTUDIO</h1>
+  <section class="metodologia-estudio">
+    <div>
+      <img src="/assets/images/img-carreras/MetodologiaEstudiopri.jpeg" alt="principal">
+      <img src="/assets/images/banner/MetodologiaEstudiobanner.jpeg" alt="banner">
+    </div>
   </section>
-  
 
-  
-
-
+  <main class="seccion">
+    <h1 class="text-center text-main">NUESTRA IDENTIDAD</h1>
+    <div class="gen-acordeon">
+      <div class="nos-contenido img-acordeon">
+        <h2>AUTORIDADES IUB</h2>
+        <div class="directorio">
+          <h3><span class="titulo__bold_dir">RECTOR/CANCILLER</span>
+              <p>Mgs. Víctor Hugo Samaniego Luna</p>
+          </h3>
+          <h3><span class="titulo__bold_dir">VICERRECTORA</span>
+              <p>Mgs. Patricia Samaniego</p>
+          </h3>
+          <h3><span class="titulo__bold_dir">COORDINACIÓN ACADÉMICA</span>
+              <p>Dra. Tamara Samaniego</p>
+          </h3>
+          <h3><span class="titulo__bold_dir">DIRECCIÓN DE INVESTIGACIÓN E INNOVACIÓN</span>
+              <p>Mgs. Jorge Vallejo </p>
+          </h3>
+          <h3><span class="titulo__bold_dir">DIRECCIÓN DE ADMISIONES</span>
+              <p>Ing. Karla González</p>
+          </h3>
+          <h3><span class="titulo__bold_dir">DIRECCIÓN DE RELACIONES INTERNACIONALES</span>
+              <p>Ing. Daniela Reyes</p>
+          </h3>
+          <h3><span class="titulo__bold_dir">DIRECCIÓN DE GESTIÓN FINANCIERA</span>
+              <p>Ing. Sandy Rodríguez</p>
+          </h3>
+          <h3><span class="titulo__bold_dir">DIRECCIÓN DE COMUNICACIÓN SOCIAL</span>
+              <p>Mgs. Jorge Guazha</p>
+          </h3>
+          <h3><span class="titulo__bold_dir">DIRECCIÓN DEL ÁREA DE MARKETING</span>
+              <p>Tnlga. Karen Cárdenas</p>
+          </h3>
+        </div>
+      </div>
+      <div class="nos-contenido contenedor-acordeon">
+        <div class="acordeon">
+           <div class="titulo-acordeon">
+            <p class=" titulo-acordeon">IDENTIDAD<img class="ico-acordeon" src="/assets/images/iconos/flecha.png" width="22" height="22" alt="flecha"></p>
+          </div>
+          <div class="contenido-acordeon">
+            <p class="contenido-acordeon">
+              El Instituto Superior Universitario Bolivariano con la finalidad de ayudar en la solución de los problemas socio – culturales, científicos, educativos, etc., que detienen el desarrollo de la cuidad, provincia de Loja y el resto del país, aporta en forma directa y decidida educando, formando y profesionalizando a la ciudadanía de acuerdo con las necesidades del tiempo y del medio; para lo cual oferta carreras nuevas que responden a las reales necesidades de formación superior profesional de la provincia de Loja y la Región Sur del país. Las profesiones ofertadas tienen como objetivo involucrar a los individuos, inmediatamente, a la actividad productiva a través de la conformación e implementación de sus propias empresas.
+            </p>
+          </div>
+        </div>
+        <div class="acordeon">
+          <div class="titulo-acordeon">
+            <p class=" titulo-acordeon">MISIÓN<img class="ico-acordeon" src="/assets/images/iconos/flecha.png" width="22" height="22" alt="flecha"></p>
+          </div>
+          <div class="contenido-acordeon">
+            <p class="contenido-acordeon">
+              Somos un Instituto de Educación Superior Universitario, acreditado, líder en la Región 7 del país, reconocido en el contexto nacional e internacional, con sólida calidad académica; practicamos la excelencia en profesionalizar al ser humano, convirtiéndolo en líder innovador y humanista, generador vinculante del progreso económico y social; acogiendo el derecho de las personas a una educación superior humanista, cultural, científica y de igualdad de oportunidades.
+            </p>
+          </div>
+        </div>
+        <div class="acordeon">
+          <div class="titulo-acordeon">
+            <p class=" titulo-acordeon">VISIÓN<img class="ico-acordeon" src="/assets/images/iconos/flecha.png" width="22" height="22" alt="flecha"></p>
+          </div>
+            <div class="contenido-acordeon">
+              <p class="contenido-acordeon">
+                Consolidar nuestro modelo pedagógico-educativo, potenciando la investigación, innovación y vinculación, logrando un amplio reconocimiento, por el aporte y liderazgo de nuestros graduados en el sector público y privado; procurar el impulso del desarrollo económico-social, basado en el conocimiento y la práctica; continuar formando profesionales emprendedores, creadores de sus propias empresas, con amplia vocación de servicio integral.
+              </p>
+            </div>
+          </div>
+          <div class="acordeon">
+            <div class="titulo-acordeon">
+               <p class=" titulo-acordeon">OBJETIVOS<img class="ico-acordeon" src="/assets/images/iconos/flecha.png" width="22" height="22" alt="flecha"></p>
+            </div>
+            <div class="contenido-acordeon-val contenido-acordeon">
+              <ul>
+                <li>
+                  Promover el desarrollo humanístico científico, socioeconómico, técnico, tecnológico y universitario de la región sur y del ámbito nacional, mediante la profesionalización, capacitación y promoción de los ciudadanos.
+                </li>
+                <li>
+                  Descubrir y desarrollar los valores éticos, estéticos, culturales, humanísticos, religiosos, morales y de rendición de cuentas, para orientarlos al servicio de la sociedad.
+                </li>
+                <li>
+                  Contribuir al desarrollo humano y al desenvolvimiento productivo, en coordinación con la comunidad local, provincial, nacional e internacional.
+                </li>
+                <li>
+                  Promover la responsabilidad social mediante el compromiso que la educación de tercer y cuarto nivel tienen con el emprendimiento regional y local basado no solo en los procesos de formación de talento humano; sino también, en la generación de condiciones internas para adelantar procesos de interacción con el contexto local, regional y nacional, con el fin de que las actividades académicas y de investigación tengan impactos positivos en su mejoramiento y desarrollo.
+                </li>
+                <li>
+                  Fomentar la oferta académica de cuarto nivel con posgrados tecnológicos de calidad y excelencia de la región sur y del ámbito nacional.
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="acordeon">
+            <div class="titulo-acordeon">
+              <p class=" titulo-acordeon">ESTRATEGIAS<img class="ico-acordeon" src="/assets/images/iconos/flecha.png" width="22" height="22" alt="flecha"></p>
+            </div>
+            <div class="contenido-acordeon-val contenido-acordeon">
+              <ul>
+                <li>
+                  Actualización y perfeccionamiento del personal docente de la Institución, para lograr una acción, productiva, creativa e innovadora, en beneficio de la colectividad.
+                </li>
+                <li>
+                  Creación y fortalecimientos de vínculos con instituciones educativas similares e instituciones empresariales del sector público y privado de la ciudad, provincia, del país y del extranjero.
+                </li>
+                <li>
+                  Planificación, organización, ejecución, supervisión y evaluación de micro proyectos de desarrollo productivo para promover el desarrollo económico – social y preservar el medio ambiente en beneficio de la ciudad, provincia y región sur del país.
+                </li>
+                <li>
+                  Aplicación de aprendizajes conceptuales, procesales y actitudinales, acordes a los avances científico-tecnológicos y las necesidades y los cambios del entorno.
+                </li>
+              </ul>
+            </div>
+          </div>
+      </div>
+        
+    </div>
+    
+  </main>
 
   <footer>
 
