--- a/admisiones-iub.html
+++ b/admisiones-iub.html
@@ -52,10 +52,10 @@
               <li><a href="/carreras/diplomados/cuidadospacientecritico.html">Cuidados de Enfermería en el Paciente Crítico</a></li>
               <li><a href="/carreras/diplomados/instrumentacion.html">Instrumentación Quirúrgica</a></li> 
               <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>
-              <li><a href="/carreras/diplomados/adultomayor.html">Gestión de Proyectos</a></li>   
+              <li><a href="/carreras/diplomados/gestion-proyectos.html">Gestión de Proyectos</a></li>   
             </ul>
           </li>
-          <li><a href="matriculate-online.html">MATRICULATE ONLINE</a></li>
+          <li><a href="matriculate-online.php">MATRICULATE ONLINE</a></li>
           
         </nav>
         
@@ -68,7 +68,7 @@
         <input type="checkbox" id="check" class="menu_checkbox">
         <ul class="menu-mobile-items">
           <li><a href="index.html">Inicio</a></li>
-          <li class="dropdown"><a href="ofertaAcademica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="oferta-academica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
             <ul> 
               <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
               <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
