--- a/formacion-continua.html
+++ b/formacion-continua.html
@@ -67,17 +67,17 @@
         <input type="checkbox" id="check" class="menu_checkbox">
         <ul class="menu-mobile-items">
           <li><a href="index.html">Inicio</a></li>
-          <li class="dropdown"><a href="ofertaAcademica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="oferta-academica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
             <ul> 
               <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
               <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
               <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
               <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-              <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+              <li><a href="formacion-continua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
             </ul>
           </li>
           <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-          <li class="dropdown"><a href="matriculateOnline.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
             <ul> 
               <li><a href="/carreras/diplomados/cuidadospacientecritico.html">Cuidados de Enfermería en el Paciente Crítico</a></li>
               <li><a href="/carreras/diplomados/instrumentacion.html">Instrumentación Quirúrgica</a></li> 
