--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li class="dropdown"><a href="admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="oferta-academica.html">PREGRADO</a></li> 
-            <li><a href="formacioncontinua.html">FORMACION CONTINUA</a></li>   
+            <li><a href="formacion-continua.html">FORMACION CONTINUA</a></li>   
           </ul>
         </li>
         <li class="dropdown"><a href="oferta-academica.html">OFERTA ACADEMICA<i class="bi bi-chevron-down"></i></a>
@@ -50,7 +50,7 @@
           </ul>
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-        <a href="matriculate-Online.html">MATRICULATE ONLINE</a>
+        <a href="matriculate-online.php">MATRICULATE ONLINE</a>
         <a href="metodologia-Estudio.html">METODOLOGIA DE ESTUDIO</a>
         <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
       </nav>
@@ -91,34 +91,34 @@
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/assets/images/Carrusel/inicio1.jpg" class="d-block w-100" alt="uno">
-            <div class="carousel-caption d-none d-md-block card-hero">
+            <img src="/assets/images/Carrusel/inicial.jpeg" class="d-block w-100" alt="uno">
+            <!--<div class="carousel-caption d-none d-md-block card-hero">
               <span>Bienvenidos a Bolivariano Online.</span>
               <p>Transforma Tu futuro con Bolivariano Online! En el Instituto Superior Universitario Bolivariano, estamos comprometidos con la excelencia académica y la innovación educativa.
               </p>
               <p>  
                 Nuestra Plataforma Bolivariano Online te ofrece una educación superior de calidad, adaptada a las necesidades del mundo moderno y accesible desde cualquier lugar, obtén Tú título de tercer nivel avalado por la SENESCYT.
               </p>
-            </div>
+            </div>-->
           </div>
           <div class="carousel-item">
-            <img src="/assets/images/Carrusel/inicio2.jpg" class="d-block w-100" alt="dos">
-            <div class="carousel-caption d-none d-md-block">
+            <img src="/assets/images/Carrusel/Convenciones.jpeg" class="d-block w-100" alt="dos">
+            <!--<div class="carousel-caption d-none d-md-block">
               <h3>Administracion de Sistemas de Salud</h3>
-            </div>
+            </div>-->
           </div>
           <div class="carousel-item">
-            <img src="/assets/images/Carrusel/inicio3.jpg" class="d-block w-100" alt="tres">
-            <div class="carousel-caption d-none d-md-block">
+            <img src="/assets/images/Carrusel/BibliotecaVirtual.jpeg" class="d-block w-100" alt="tres">
+            <!--<div class="carousel-caption d-none d-md-block">
               <h3>Calidad y Productividad</h3>
-            </div>
+            </div>-->
           </div>
-          <div class="carousel-item">
+          <!--<div class="carousel-item">
             <img src="/assets/images/Carrusel/inicio4.jpg" class="d-block w-100" alt="cuatro">
             <div class="carousel-caption d-none d-md-block">
               <h3>Administracion Tecnologica e Innovacion Estrategica</h3>
             </div>
-          </div>
+          </div>-->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
