--- a/oferta-academica.html
+++ b/oferta-academica.html
@@ -73,18 +73,18 @@
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
             <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
             <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior en Calidad y Productividad </a></li>
-            <li><a href="formacioncontinua.html">Tecnología Superior Universitaria en Contabilidad</a></li>   
+            <li><a href="formacion-continua.html">Tecnología Superior Universitaria en Contabilidad</a></li>   
           </ul>
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-        <li class="dropdown"><a href="matriculateOnline.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="/carreras/diplomados/cuidadospacientecritico.html">Cuidados de Enfermería en el Paciente Crítico</a></li>
             <li><a href="/carreras/diplomados/instrumentacion.html">Instrumentación Quirúrgica</a></li> 
             <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>   
           </ul>
         </li>
-        <li><a href="matriculate-online.html">Matriculate Online</a></li>
+        <li><a href="matriculate-online.php">Matriculate Online</a></li>
       </ul>  
     </div>
 
