--- a/pregrado.html
+++ b/pregrado.html
@@ -43,7 +43,7 @@
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
             <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
             <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="formacion-continua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
           </ul>
         </li>
         <li class="dropdown"><a href="formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
@@ -54,7 +54,7 @@
             <li><a href="/carreras/diplomados/adultomayor.html">Gestión de Proyectos</a></li>   
           </ul>
         </li>
-        <li><a href="matriculate-online.html">Matriculate Online</a></li>
+        <li><a href="matriculate-online.php">Matriculate Online</a></li>
         
       </nav>
       
@@ -73,7 +73,7 @@
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
             <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
             <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="pregrado.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
           </ul>
         </li>
         <li class="dropdown"><a href="formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
@@ -84,7 +84,7 @@
             <li><a href="/carreras/diplomados/adultomayor.html">Gestión de Proyectos</a></li>   
           </ul>
         </li>
-        <li><a href="matriculate-online.html">Matriculate Online</a></li>
+        <li><a href="matriculate-online.php">Matriculate Online</a></li>
       </ul>  
     </div>
 
