Se arregla unos enlaces

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
         <a href="matriculate-online.php">MATRICULATE ONLINE</a>
-        <a href="metodologia-Estudio.html">METODOLOGIA DE ESTUDIO</a>
+        <a href="metodologia-estudio.html">METODOLOGIA DE ESTUDIO</a>
         <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
       </nav>
       
