--- a/metodologia-estudio.html
+++ b/metodologia-estudio.html
@@ -50,7 +50,7 @@
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
         <a href="matriculate-online.php">MATRICULATE ONLINE</a>
-        <a href="metodologia-Estudio.html">METODOLOGIA DE ESTUDIO</a>
+        <a href="metodologia-estudio.html">METODOLOGIA DE ESTUDIO</a>
         <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
       </nav>
       
