--- a/formacion-continua.html
+++ b/formacion-continua.html
@@ -42,8 +42,8 @@
               <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
               <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
               <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-              <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-              <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+              <li><a href="/carreras/maestrias/calidadProductividad.html">Tecnologia Superior en Calidad y Productividad </a></li>
+              <li><a href="/formacion-continua.html">Tecnología Superior Universitaria en Contabilidad</a></li>   
             </ul>
           </li>
           <li class="dropdown"><a href="formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
@@ -54,7 +54,7 @@
               <li><a href="/carreras/diplomados/gestion-proyectos.html">Gestión de Proyectos</a></li>   
             </ul>
           </li>
-          <li><a href="matriculate-online.html">MATRICULATE ONLINE</a></li>
+          <li><a href="/matriculate-online.php">MATRICULATE ONLINE</a></li>
           
         </nav>
         
@@ -72,8 +72,8 @@
               <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
               <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
               <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-              <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-              <li><a href="formacion-continua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+              <li><a href="/carreras/maestrias/calidadProductividad.html">Tecnologia Superior en Calidad y Productividad </a></li>
+              <li><a href="/formacion-continua.html">Tecnología Superior Universitaria en Contabilidad</a></li>   
             </ul>
           </li>
           <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
@@ -81,10 +81,11 @@
             <ul> 
               <li><a href="/carreras/diplomados/cuidadospacientecritico.html">Cuidados de Enfermería en el Paciente Crítico</a></li>
               <li><a href="/carreras/diplomados/instrumentacion.html">Instrumentación Quirúrgica</a></li> 
-              <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>   
+              <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>
+              <li><a href="/carreras/diplomados/gestion-proyectos.html">Gestión de Proyectos</a></li>   
             </ul>
           </li>
-          <li><a href="matriculate-online.html">Matriculate Online</a></li>
+          <li><a href="/matriculate-online.php">MATRICULATE ONLINE</a></li>
         </ul>  
       </div>
 
@@ -160,7 +161,7 @@
 
       <div class="tarjeta-contenido_central">
         <div>
-          <img src="/assets/images/img-carreras/dos.png" alt="salud">
+          <img src="/assets/images/img-carreras/pacientecuidadoscriticos.jpg" alt="salud">
         </div>
         <div class="tarjeta-contenido_texto">
           <h2>Diplomado en Cuidados de Enfermería en el Paciente Crítico</h2>
@@ -174,7 +175,7 @@
 
       <div class="tarjeta-contenido_central">
         <div>
-          <img src="/assets/images/img-carreras/dos.png" alt="">
+          <img src="/assets/images/img-carreras/instrumento.jpg" alt="">
         </div>
         <div class="tarjeta-contenido_texto">
           <h2>Diplomado en Instrumentación Quirúrgica</h2>
@@ -187,7 +188,7 @@
 
       <div class="tarjeta-contenido_central">
         <div>
-          <img src="/assets/images/img-carreras/dos.png" alt="">
+          <img src="/assets/images/img-carreras/adultomayor.jpg" alt="">
         </div>
         <div class="tarjeta-contenido_texto">
           <h2>Diplomado en Cuidados del Adulto Mayor</h2>
