Se arregla el dropdown

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
         <a href="matriculate-online.html">MATRICULATE ONLINE</a>
         <a href="metodologia-estudio.html">METODOLOGIA DE ESTUDIO</a>
-        <a href="https://bolivarianovirtual.com/login/index.php">BOLIVARIANO DIGITAL EDUCA</a>
+        <a href="https://bolivarianovirtual.com/login/index.php" target="_blank">BOLIVARIANO DIGITAL EDUCA</a>
       </ul>  
     </div>
 
