Se arregla el menu para que este sobre la pagina

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </div>
 
       <div class="metodologia text-center">
-        <a href="formacionContinua.html">
+        <a href="formacion-continua.html">
           <img src="/assets/images/educacionContinua.jpg" alt="">
           <h2>FORMACIÓN CONTINUA</h2>
         </a>
@@ -199,14 +199,16 @@
 
       <div class="tarjeta contenedor">
         <div class="tarjeta-evento">
-          <img src="/assets/images/illustration/eventos/evento1.jpg" alt="">
-          <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+          <img src="/assets/images/eventos/Caces.png" alt="Caces">
+          <h3>Bolivariano cumple efectivo proceso para evaluación,
+            según evidencia el CACES que brindó una conferencia 
+          </h3>
           <p><a href="#">leer Mas...</a></p>
         </div>
 
         <div class="tarjeta-evento">
-          <img src="/assets/images/illustration/eventos/evento2.jpg" alt="">
-          <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+          <img src="/assets/images/eventos/HonorisCausa.png" alt="Honoris">
+          <h3>Trayectoria académica del Rector del Universitario Bolivariano impulsó su Doctorado Honoris Causa</h3>
           <p><a href="#">leer Mas...</a></p>
         </div>
 
@@ -231,8 +233,8 @@
       <div class="accesodirecto-menu">
         <ul>
           <li class="acceso1"><i class="bi bi-calendar-check icon"></i><a href="#">Calendarios Académicos</a></li>
-          <li class="acceso2"><i class="bi bi-pc-display icon"></i><a href="#">Biblioteca Virtual</a></li>
-          <li class="acceso3"><i class="bi bi-person-video3 icon"></i><a href="">Educación Online</a></li>
+          <li class="acceso2"><i class="bi bi-pc-display icon"></i><a href="https://bolivarianovirtual.com/mod/url/view.php?id=83932" target="_blank">Biblioteca Virtual</a></li>
+          <li class="acceso3"><i class="bi bi-person-video3 icon"></i><a href="https://bolivarianovirtual.com" target="_blank">Educación Online</a></li>
         </ul>
       </div>
     </div>
